// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Doors renders correctly 1`] = `
<svg>
  <SingleSlideDoor
    currentMode={2}
    door={
      Object {
        "door_type": 2,
        "motion_direction": 1,
        "motion_range": -1.571,
        "name": "main_door",
        "v1_x": 8.2,
        "v1_y": -5.5,
        "v2_x": 7.85,
        "v2_y": -6.2,
      }
    }
    v1={
      Array [
        8.2,
        -5.5,
      ]
    }
    v2={
      Array [
        7.85,
        -6.2,
      ]
    }
  >
    <DefaultDoor
      style="makeStyles-doorOpen-11"
      v1={
        Array [
          8.2,
          5.5,
        ]
      }
      v2={
        Array [
          7.85,
          6.2,
        ]
      }
    >
      <g
        onClick={[Function]}
      >
        <line
          className="makeStyles-doorMarker-8 makeStyles-door-9 makeStyles-doorOpen-11"
          x1={8.2}
          x2={7.85}
          y1={5.5}
          y2={6.2}
        />
      </g>
    </DefaultDoor>
    <DefaultDoor
      style="makeStyles-doorTransparent-14"
      v1={
        Array [
          8.2,
          5.5,
        ]
      }
      v2={
        Array [
          7.85,
          6.2,
        ]
      }
    >
      <g
        onClick={[Function]}
      >
        <line
          className="makeStyles-doorMarker-8 makeStyles-door-9 makeStyles-doorTransparent-14"
          x1={8.2}
          x2={7.85}
          y1={5.5}
          y2={6.2}
        />
      </g>
    </DefaultDoor>
  </SingleSlideDoor>
</svg>
`;

exports[`Doors renders correctly 2`] = `
<svg>
  <DoubleSlideDoor
    currentMode={2}
    door={
      Object {
        "door_type": 2,
        "motion_direction": 1,
        "motion_range": -1.571,
        "name": "main_door",
        "v1_x": 8.2,
        "v1_y": -5.5,
        "v2_x": 7.85,
        "v2_y": -6.2,
      }
    }
    v1={
      Array [
        8.2,
        -5.5,
      ]
    }
    v2={
      Array [
        7.85,
        -6.2,
      ]
    }
  >
    <SingleSlideDoor
      currentMode={2}
      door={
        Object {
          "door_type": 2,
          "motion_direction": 1,
          "motion_range": -1.571,
          "name": "main_door",
          "v1_x": 8.2,
          "v1_y": -5.5,
          "v2_x": 7.85,
          "v2_y": -6.2,
        }
      }
      v1={
        Array [
          8.2,
          -5.5,
        ]
      }
      v2={
        Array [
          8.024999999999999,
          -5.85,
        ]
      }
    >
      <DefaultDoor
        style="makeStyles-doorOpen-18"
        v1={
          Array [
            8.2,
            5.5,
          ]
        }
        v2={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-15 makeStyles-door-16 makeStyles-doorOpen-18"
            x1={8.2}
            x2={8.024999999999999}
            y1={5.5}
            y2={5.85}
          />
        </g>
      </DefaultDoor>
      <DefaultDoor
        style="makeStyles-doorTransparent-21"
        v1={
          Array [
            8.2,
            5.5,
          ]
        }
        v2={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-15 makeStyles-door-16 makeStyles-doorTransparent-21"
            x1={8.2}
            x2={8.024999999999999}
            y1={5.5}
            y2={5.85}
          />
        </g>
      </DefaultDoor>
    </SingleSlideDoor>
    <SingleSlideDoor
      currentMode={2}
      door={
        Object {
          "door_type": 2,
          "motion_direction": 1,
          "motion_range": -1.571,
          "name": "main_door",
          "v1_x": 8.2,
          "v1_y": -5.5,
          "v2_x": 7.85,
          "v2_y": -6.2,
        }
      }
      v1={
        Array [
          8.024999999999999,
          -5.85,
        ]
      }
      v2={
        Array [
          7.85,
          -6.2,
        ]
      }
    >
      <DefaultDoor
        style="makeStyles-doorOpen-18"
        v1={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
        v2={
          Array [
            7.85,
            6.2,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-15 makeStyles-door-16 makeStyles-doorOpen-18"
            x1={8.024999999999999}
            x2={7.85}
            y1={5.85}
            y2={6.2}
          />
        </g>
      </DefaultDoor>
      <DefaultDoor
        style="makeStyles-doorTransparent-21"
        v1={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
        v2={
          Array [
            7.85,
            6.2,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-15 makeStyles-door-16 makeStyles-doorTransparent-21"
            x1={8.024999999999999}
            x2={7.85}
            y1={5.85}
            y2={6.2}
          />
        </g>
      </DefaultDoor>
    </SingleSlideDoor>
  </DoubleSlideDoor>
</svg>
`;

exports[`Doors renders correctly 3`] = `
<svg>
  <SingleHingeDoor
    currentMode={2}
    door={
      Object {
        "door_type": 2,
        "motion_direction": 1,
        "motion_range": -1.571,
        "name": "main_door",
        "v1_x": 8.2,
        "v1_y": -5.5,
        "v2_x": 7.85,
        "v2_y": -6.2,
      }
    }
    v1={
      Array [
        8.2,
        -5.5,
      ]
    }
    v2={
      Array [
        7.85,
        -6.2,
      ]
    }
  >
    <DefaultDoor
      style="makeStyles-doorOpen-25"
      v1={
        Array [
          8.2,
          5.5,
        ]
      }
      v2={
        Array [
          7.85,
          6.2,
        ]
      }
    >
      <g
        onClick={[Function]}
      >
        <line
          className="makeStyles-doorMarker-22 makeStyles-door-23 makeStyles-doorOpen-25"
          x1={8.2}
          x2={7.85}
          y1={5.5}
          y2={6.2}
        />
      </g>
    </DefaultDoor>
    <DefaultDoor
      style="makeStyles-doorTransparent-28"
      v1={
        Array [
          8.2,
          5.5,
        ]
      }
      v2={
        Array [
          7.85,
          6.2,
        ]
      }
    >
      <g
        onClick={[Function]}
      >
        <line
          className="makeStyles-doorMarker-22 makeStyles-door-23 makeStyles-doorTransparent-28"
          x1={8.2}
          x2={7.85}
          y1={5.5}
          y2={6.2}
        />
      </g>
    </DefaultDoor>
  </SingleHingeDoor>
</svg>
`;

exports[`Doors renders correctly 4`] = `
<svg>
  <DoubleHingeDoor
    currentMode={2}
    door={
      Object {
        "door_type": 2,
        "motion_direction": 1,
        "motion_range": -1.571,
        "name": "main_door",
        "v1_x": 8.2,
        "v1_y": -5.5,
        "v2_x": 7.85,
        "v2_y": -6.2,
      }
    }
    v1={
      Array [
        8.2,
        -5.5,
      ]
    }
    v2={
      Array [
        7.85,
        -6.2,
      ]
    }
  >
    <SingleHingeDoor
      currentMode={2}
      door={
        Object {
          "door_type": 2,
          "motion_direction": 1,
          "motion_range": -1.571,
          "name": "main_door",
          "v1_x": 8.2,
          "v1_y": -5.5,
          "v2_x": 7.85,
          "v2_y": -6.2,
        }
      }
      v1={
        Array [
          8.2,
          -5.5,
        ]
      }
      v2={
        Array [
          8.024999999999999,
          -5.85,
        ]
      }
    >
      <DefaultDoor
        style="makeStyles-doorOpen-32"
        v1={
          Array [
            8.2,
            5.5,
          ]
        }
        v2={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-29 makeStyles-door-30 makeStyles-doorOpen-32"
            x1={8.2}
            x2={8.024999999999999}
            y1={5.5}
            y2={5.85}
          />
        </g>
      </DefaultDoor>
      <DefaultDoor
        style="makeStyles-doorTransparent-35"
        v1={
          Array [
            8.2,
            5.5,
          ]
        }
        v2={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-29 makeStyles-door-30 makeStyles-doorTransparent-35"
            x1={8.2}
            x2={8.024999999999999}
            y1={5.5}
            y2={5.85}
          />
        </g>
      </DefaultDoor>
    </SingleHingeDoor>
    <SingleHingeDoor
      currentMode={2}
      door={
        Object {
          "door_type": 2,
          "motion_direction": 1,
          "motion_range": -1.571,
          "name": "main_door",
          "v1_x": 8.2,
          "v1_y": -5.5,
          "v2_x": 7.85,
          "v2_y": -6.2,
        }
      }
      v1={
        Array [
          8.024999999999999,
          -5.85,
        ]
      }
      v2={
        Array [
          7.85,
          -6.2,
        ]
      }
    >
      <DefaultDoor
        style="makeStyles-doorOpen-32"
        v1={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
        v2={
          Array [
            7.85,
            6.2,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-29 makeStyles-door-30 makeStyles-doorOpen-32"
            x1={8.024999999999999}
            x2={7.85}
            y1={5.85}
            y2={6.2}
          />
        </g>
      </DefaultDoor>
      <DefaultDoor
        style="makeStyles-doorTransparent-35"
        v1={
          Array [
            8.024999999999999,
            5.85,
          ]
        }
        v2={
          Array [
            7.85,
            6.2,
          ]
        }
      >
        <g
          onClick={[Function]}
        >
          <line
            className="makeStyles-doorMarker-29 makeStyles-door-30 makeStyles-doorTransparent-35"
            x1={8.024999999999999}
            x2={7.85}
            y1={5.85}
            y2={6.2}
          />
        </g>
      </DefaultDoor>
    </SingleHingeDoor>
  </DoubleHingeDoor>
</svg>
`;
